Changes in robustHD version 0.2.0

    + Graphics now based on ggplot2 instead of lattice.
    
    + coef(), fitted(), residuals() and weights() methods now have argument 
      'drop' to control whether to reduce the dimension if possible.
    
    + Print methods for "sparseLTS" and "sparseLTSGrid" now only show non-zero 
      coefficients by default; also added argument to print method for "rlars".
    
    + sparseLTS() and sparseLTSGrid() now store raw fitted values.
    
    + Parallel computing for sparseLTS() now available via OpenMP.
    
    + rlars() is now using C++ code for variable sequencing.
    
    + Bugfixes in C++ code for sparseLTS() and fastLasso() to prevent memory 
      related errors.