@@ -44,11 +44,11 @@ S3method(sparseLTS,default)
 S3method(sparseLTS,formula)
 S3method(sparseLTSGrid,default)
 S3method(sparseLTSGrid,formula)
-S3method(weights,sparseLTS)
-S3method(weights,sparseLTSGrid)
 S3method(winsorize,data.frame)
 S3method(winsorize,default)
 S3method(winsorize,matrix)
+S3method(wt,sparseLTS)
+S3method(wt,sparseLTSGrid)
 export(coefPlot)
 export(corHuber)
 export(critPlot)
@@ -62,6 +62,7 @@ export(sparseLTS)
 export(sparseLTSGrid)
 export(standardize)
 export(winsorize)
+export(wt)
 import(MASS)
 import(Rcpp)
 import(RcppArmadillo)
