@@ -446,7 +446,7 @@ labelify <- function(data, which, id.n = NULL) {
 #' with the largest distances from that line are identified by a label (the 
 #' observation number).  The default for \code{id.n} is the number of 
 #' regression outliers, i.e., the number of observations with outlier weight 
-#' equal to 0  (see \code{\link[=weights.sparseLTS]{weights}}).
+#' equal to 0  (see \code{\link[=wt.sparseLTS]{wt}}).
 #' 
 #' In the plots of the standardized residuals versus their index or the fitted 
 #' values, horizontal reference lines are drawn at 0 and +/-2.5.  The 
@@ -454,7 +454,7 @@ labelify <- function(data, which, id.n = NULL) {
 #' standardized residuals are identified by a label (the observation 
 #' number).  The default for \code{id.n} is the number of regression outliers, 
 #' i.e., the number of observations with outlier weight equal to 0  (see 
-#' \code{\link[=weights.sparseLTS]{weights}}).
+#' \code{\link[=wt.sparseLTS]{wt}}).
 #' 
 #' For the regression diagnostic plot, the robust Mahalanobis distances of the 
 #' predictor variables are computed via the MCD based on only those predictors 
@@ -468,10 +468,9 @@ labelify <- function(data, which, id.n = NULL) {
 #' are identified by a label (the observation number).  The default for 
 #' \code{id.n} is the number of all outliers: regression outliers (i.e., 
 #' observations with outlier weight equal to 0, see 
-#' \code{\link[=weights.sparseLTS]{weights}}) and leverage points (i.e., 
-#' observations with robust Mahalanobis distance larger than the 97.5\% 
-#' quantile of the \eqn{\chi^{2}}{chi-squared} distribution with \eqn{p} 
-#' degrees of freedom).
+#' \code{\link[=wt.sparseLTS]{wt}}) and leverage points (i.e., observations 
+#' with robust Mahalanobis distance larger than the 97.5\% quantile of the 
+#' \eqn{\chi^{2}}{chi-squared} distribution with \eqn{p} degrees of freedom).
 #' 
 #' @param x  the model fit for which to produce diagnostic plots, or a data 
 #' frame containing all necessary information for plotting (as generated by the 
