@@ -19,15 +19,15 @@ x[i,] <- x[i,] + 5              # bad leverage points
 # fit model
 fit <- sparseLTS(x, y, lambda = 0.05, mode = "fraction")
 # extract outlier weights
-weights(fit)
-weights(fit, fit = "both")
+wt(fit)
+wt(fit, fit = "both")
 
 ## sparse LTS over a grid of values for lambda
 # fit model
 frac <- seq(0.25, 0.05, by = -0.05)
 fitGrid <- sparseLTSGrid(x, y, lambda = frac, mode = "fraction")
 # extract outlier weights
-weights(fitGrid)
-weights(fitGrid, fit = "both")
-weights(fitGrid, s = NULL)
-weights(fitGrid, fit = "both", s = NULL)
+wt(fitGrid)
+wt(fitGrid, fit = "both")
+wt(fitGrid, s = NULL)
+wt(fitGrid, fit = "both", s = NULL)
