@@ -97,7 +97,7 @@
   observation number).  The default for \code{id.n} is the
   number of regression outliers, i.e., the number of
   observations with outlier weight equal to 0 (see
-  \code{\link[=weights.sparseLTS]{weights}}).
+  \code{\link[=wt.sparseLTS]{wt}}).
 
   In the plots of the standardized residuals versus their
   index or the fitted values, horizontal reference lines
@@ -107,7 +107,7 @@
   number).  The default for \code{id.n} is the number of
   regression outliers, i.e., the number of observations
   with outlier weight equal to 0 (see
-  \code{\link[=weights.sparseLTS]{weights}}).
+  \code{\link[=wt.sparseLTS]{wt}}).
 
   For the regression diagnostic plot, the robust
   Mahalanobis distances of the predictor variables are
@@ -125,9 +125,9 @@
   number).  The default for \code{id.n} is the number of
   all outliers: regression outliers (i.e., observations
   with outlier weight equal to 0, see
-  \code{\link[=weights.sparseLTS]{weights}}) and leverage
-  points (i.e., observations with robust Mahalanobis
-  distance larger than the 97.5\% quantile of the
+  \code{\link[=wt.sparseLTS]{wt}}) and leverage points
+  (i.e., observations with robust Mahalanobis distance
+  larger than the 97.5\% quantile of the
   \eqn{\chi^{2}}{chi-squared} distribution with \eqn{p}
   degrees of freedom).
 }
